--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -35,3 +35,7 @@ management:
   endpoint:
     health:
       show-details: when_authorized
+  endpoints:
+    web:
+      exposure:
+        include: ["info","health","metrics","prometheus"]
