Eureka custom url

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -23,6 +23,12 @@ ribbon:
   ReadTimeout: 3000
   ConnectTimeout: 3000
 
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+
 zuul:
   ignoredServices: 'grpc-service'
   routes:
