--- a/rest-service-0/pom.xml
+++ b/rest-service-0/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.coherentsolutions</groupId>
     <artifactId>rest-service-0</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>rest-service-0</name>
