--- a/service-registry/pom.xml
+++ b/service-registry/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.coherentsolutions</groupId>
     <artifactId>service-registry</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>service-registry</name>
