--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,12 @@ build-backend:
   only:
     - master
   script:
-    - >
-      mvn -T 4 -Dmaven.test.skip=true $MAVEN_CLI_OPTS clean install
-      cp ./service-registry/target/service-registry-1.0.jar /var/bootrest
-      cp ./rest-service-0/target/rest-service-0-1.0.jar /var/bootrest
-      cp ./rest-service-1/target/rest-service-1-1.0.jar /var/bootrest
-      cp ./gateway/target/gateway-1.0.jar /var/bootrest
-      cp ../ansible-playbook.yml /var/todoz/ansible-playbook.yml
+    - mvn -T 4 -Dmaven.test.skip=true $MAVEN_CLI_OPTS clean install
+    - cp ./service-registry/target/service-registry-1.0.jar /var/bootrest
+    - cp ./rest-service-0/target/rest-service-0-1.0.jar /var/bootrest
+    - cp ./rest-service-1/target/rest-service-1-1.0.jar /var/bootrest
+    - cp ./gateway/target/gateway-1.0.jar /var/bootrest
+    - cp ../ansible-playbook.yml /var/todoz/ansible-playbook.yml
 
 deploy-backend:
   stage: deploy
@@ -39,5 +38,4 @@ deploy-backend:
   only:
     - master
   script:
-    - >
-      ansible-playbook /var/todoz/ansible-playbook.yml
+    ansible-playbook /var/todoz/ansible-playbook.yml
