--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -45,3 +45,17 @@ management:
     web:
       exposure:
         include: ["info","health","metrics","prometheus"]
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
+      percentiles:
+        http:
+          server:
+            requests: [0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.9, 0.95, 0.99, 0.999]
+      sla:
+        http:
+          server:
+            requests: [100ms, 200ms, 400ms, 600ms, 800ms, 1s, 2s, 5s]
